# smart-file-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/organizer/: categorizer.py  cli.py  config.py  executor.py  filesystem.py  organizer.py
tests/: test_categorizer.py  test_cli.py  test_config.py  test_executor.py  test_filesystem.py  test_organizer.py
